application/public/stylesheets/screen.css
/* RESET */
html, body {margin:0; /*height:100%; overflow:hidden;*/ -webkit-text-size-adjust:none; -webkit-user-select:none;}
body, form, fieldset, label, legend, input, select, textarea, option, img, p, h1, h2, h3, h4, h5, h6, table, tr, td, th, tbody, thead, tfoot, caption, ul, dl, ol, li, dd, dt {margin:0; padding:0;}
article, aside, details, figcaption, figure, footer, header, hgroup, nav, section {display:block; margin:0; padding:0;}
body, form, fieldset, img, legend {border:0;}
ul, ol {padding-left:30px;}
nav ul, nav ol {list-style:none; list-style-image:none; margin:0; padding:0;}
table {border-collapse:collapse; border-spacing:0;}
a {cursor:pointer; -webkit-tap-highlight-color: rgba(0,0,0,0); -moz-user-select:-moz-none; outline:none !important;}
p {padding-bottom:12px;}
a img {border:0;}
* {-webkit-tap-highlight-color:transparent;}
input {appearance:none; -moz-appearance:none; -webkit-appearance:none;}

/* UTILS */
.break {display:block; clear:both;}
.ir { display: block; border: 0; text-indent: -999em; overflow: hidden; background-color: transparent; background-repeat: no-repeat; text-align: left; direction: ltr; *line-height: 0; }
.ir br { display: none; }
.visuallyhidden { border: 0; clip: rect(0 0 0 0); height: 1px; margin: -1px; overflow: hidden; padding: 0; position: absolute; width: 1px; }
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus { clip: auto; height: auto; margin: 0; overflow: visible; position: static; width: auto; }
.clearfix:before, .clearfix:after { content: ""; display: table; }
.clearfix:after { clear: both; }
.clearfix { *zoom: 1; }
.left {float:left;}
.right {float:right;}
.ta-center {text-align:center;}
.ta-left {text-align:left !important;}
.relative {position:relative;}
.vh {visibility:hidden;}


/* GENERAL */
html, body {height:100%; background:#f0f1f2;}
html.device-smartphone,
.device-smartphone body {background:#024a67;}

.device-desktop {overflow-y:scroll;}

#general {min-width:500px; height:100%; background:#FFF; display:none; -webkit-transform-style:flat; -webkit-backface-visibility:hidden; -webkit-perspective:800;}
.device-smartphone #general {position:relative; z-index:100;}
.device-smartphone #general {min-width:300px;}
.device-oldbb #general {-webkit-transform-style:inherit; -webkit-backface-visibility:inherit; -webkit-perspective:inherit;}
.ie7 {height:auto;}

#header {height:100px; background:url('../img/bgr-header.png') no-repeat center center #333; background-size:1032px 100px; border-bottom:2px solid #CCC; text-align:center;}
    #header .logo {display:inline-block; margin-top:20px;}
    #header .header-illustration {position:absolute; top:0; right:0;}
    #header .btn-yes {position:absolute; right:40px; top:120px; z-index:170;}
    #header .btn-yes-small {display:none;}
    #header .btn-nav,
    #header .logo-small {display:none;}

    .device-smartphone #header {padding:10px; height:30px; background:url('../img/bgr-header-small.png') no-repeat center center #025d80; background-size:320px 50px;}
    .device-smartphone #header .btn-yes {display:none;}
    .device-smartphone #header .btn-yes-small {position:absolute; display:block; top:28px; right:10px; z-index:170;}
    .device-smartphone #header .btn-nav {position:absolute; display:block; top:5px; left:5px; z-index:180;}
    .device-smartphone #header .logo {display:none;}
    .device-smartphone #header .logo-small {display:inline-block;}
    .device-oldbb-6 #header {height:40px; padding-top:0 !important;}

    .ie7 #header .logo {display:block;}
    .ie7 #header .btn-yes {display:block;}
    /*.ie8 #header,
    .ie9 #header,
    .ie10 #header {position:static;}*/

#content {position:relative; min-height:100%; overflow:hidden;}

#navigation {position:absolute; width:133px; padding-bottom:6875px; left:0; margin-bottom:-6700px; border-right:2px solid #CCC; background:#FFF; z-index:100;}
    #navigation ul {padding:0; margin:0; list-style:none;}
    #navigation li {position:relative; padding:0; margin:0; text-align:center;}
    #navigation li a {position:relative; display:block; padding:68px 0 25px; margin:0 15px; border-bottom:1px solid #CCC; font-size:22px; line-height:19px; letter-spacing:-1px; font-family:'QualcommLight', Helvetica; color:#333; text-decoration:none; text-transform:uppercase; z-index:100;}
    #navigation li .on {display:none;}
    #navigation li:last-child a {border-bottom:0;}
    #navigation .nav-ico {position:absolute; top:25px; left:50%; margin-left:-17px;}
    #navigation .nav-arrow {display:none;}

    #navigation li.active {background:#e6e6e6;}
    #navigation li.selected a {border-color:#CFB539 !important;}

    #navigation li.selected {background:#CFB539; border-right:2px solid #CFB539; margin-right:-2px;}
    #navigation li.selected a {color:#FFF;}
    #navigation li.selected .nav-ico {display:none;}
    #navigation li.selected .nav-ico.on {display:inline-block;}
    #navigation li.selected .nav-arrow {position:absolute; display:block; top:50%; right:-3px; margin-top:-9px;}

    #navigation #nav-qpolls-badge {position:absolute; display:none; padding:1px 2px; min-width:12px; left:50%; top:50%; margin-left:7px; margin-top:-10px; background:#CFB539; border-radius:50px; color:#FFF; border:1px solid #a05815; text-align:center; font-size:12px; font-family:'QualcommRegular';}
    #navigation li.selected #nav-qpolls-badge {background:#333;}

    .device-ipad.device-landscape #navigation li a {padding:61px 0 18px;}
    .device-ipad.device-landscape #navigation .nav-ico {top:18px;}

    .device-smartphone #navigation {display:none; width:108px; z-index:50; padding-bottom:0; margin-bottom:0; background:none; -webkit-transform-style:flat; -webkit-backface-visibility:hidden; -webkit-perspective:800;}
    .device-smartphone #navigation li a {padding:55px 15px 20px; margin:0; font-size:15px; line-height:14px; color:#FFF; border-bottom:1px solid #297593;}
    .device-smartphone #navigation li.selected a {border-color:#f0f1f2 !important;}
/* ... */

